# dfajit

./: AUDIT_REPORT.md  Cargo.toml  LICENSE  README.md  gen_dfajit_tests.py  test_task.py
benches/: jit_bench.rs
examples/: debug.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_scan.rs
src/: codegen.rs  dfa.rs  error.rs  lib.rs  match_type.rs  table.rs
tests/: adversarial_jit.rs  break_it.rs  proptest_parity.proptest-regressions  proptest_parity.rs
tests/adversarial/: buffer_overflow.rs  dfa_generation.rs  jit_safety.rs  malformed.rs  massive.rs  memory.rs  mod.rs  overflow.rs  parsing.rs  platform_edge_cases.rs  test_legendary_adversarial.rs  test_legendary_faultkit.rs  unicode.rs
tests/concurrent/: mod.rs  stress.rs  test_legendary_concurrent.rs  threads.rs
tests/impossible/: conditions.rs
tests/integration/: compile_scan.rs  error_handling.rs  mod.rs  workflow.rs
tests/property/: api_props.rs  invariants.proptest-regressions  invariants.rs  mod.rs  more_props.rs
tests/regression/: bug_test.rs  mod.rs
tests/unit/: api.rs  dfa_test.rs  mod.rs  table_test.rs
