[package]
name = "dfajit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
repository = "https://github.com/santhsecurity/dfajit"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dfajit = { path = ".." }

[[bin]]
name = "fuzz_compile"
path = "fuzz_targets/fuzz_compile.rs"
doc = false

[[bin]]
name = "fuzz_scan"
path = "fuzz_targets/fuzz_scan.rs"
doc = false
